2008-09-11  Wakaba  <wakaba@suika.fam.cx>

	* Result.pm (generate_result_section): Initial
	support for the charset layer.

2008-09-10  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm (nl_text): Support for |<var>{octets}</var>|,
	|<var>{char}</var>|, and |<var>{char:hexref}</var>|
	macros.
	(generate_input_section): More charsets are added
	to the list of charsets.

	* Result.pm: Pass |char| and |octets| arguments
	to |nl_text|.

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* Result.pm (add_error): Don't raise an error even if the
	end position is after the end of the string.

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* Result.pm (add_error): Support for |value|-segment marking.

2008-08-22  Wakaba  <wakaba@suika.fam.cx>

	* Result.pm (add_error): Localize "description" link.

2008-08-17  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm: |text/x-h2h| added.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm (nl_text): We can finally get rid of a quirk.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* Input.pm (Subdocument new): Invoke superclass's new method
	such that |urls| attribute is initialized.

	* Result.pm (add_error): Use ->url attribute to obtain
	the URL of the document.  No longer output |text| argument,
	since all error types except for those used in the WebIDL module
	are now defined in the catalog.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm (start_section): Don't add item to the non-tab
	navigation menu if the item's rank is higher than 2.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* Result.pm (add_error): Pass |value| argument, if any,
	to the |nl_text| for error type texts.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm (xref_text): New method.
	(node_link): Don't make node path consumed by catalog
	engine.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm (nl_text): New rule, <var>{value}</var>,
	is implemented.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm: |fieldset| end tag no longer necessary.
