@@ -1,3 +1,8 @@
+2008-09-14  Wakaba  <wakaba@suika.fam.cx>
+
+	* Output.pm (generate_input_section): Set |tabindex=0| to |details|
+	header, to make the header focusable.
+
 2008-09-11  Wakaba  <wakaba@suika.fam.cx>
 
 	* Result.pm (generate_result_section): Initial
